--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "db:update-enum": "tsx scripts/update-enum.ts"
+    "db:update-enum": "tsx scripts/update-enum.ts",
+    "cluster": "tsx scripts/run-clustering.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.936.0",
